# lorentz_tracer

./: .clang-format  .gitignore  CITATION.cff  CMakeLists.txt  Dockerfile.linux  LICENSE  README.md  TODO.md  TRANSLATING.md  build-cross.sh  index.html  lorentz_tracer.data  lorentz_tracer.js  lorentz_tracer.wasm
.github/workflows/: build.yml
cmake/: mingw-w64.cmake
i18n/: all_de.txt  all_eo.txt  all_es.txt  all_fr.txt  all_fr_new.txt  all_it.txt  all_ja.txt  all_ko.txt  all_pt.txt  all_ru.txt  all_zh-CN.txt  all_zh-TW.txt  assemble.py  fun_tables.c  generated_tables.c  translate_all.sh
resources/: Info.plist.in  gen_icon.py  lorentz_tracer.icns  shell.html
resources/scenarios/: 01_curvature_drift.txt  02_cyclotron_motion.txt  03_grad_b_drift.txt  03_magnetic_mirror.txt  05_banana_orbit.txt
src/: app.c  app.h  boris.c  boris.h  diagnostics.c  diagnostics.h  explorer.c  explorer.h  field.c  field.h  field_bottle.c  field_circular.c  field_dipole.c  field_grad_b.c  field_higher_grad.c  field_nonphysical.c  field_sinusoidal.c  field_stellarator.c  field_tokamak.c  field_torus.c  gc.c  gc.h  help.c  help.h  i18n.c  i18n.h  i18n_cjk_codepoints.h  main.c  nax.c  nax.h  nax_axis.c  nax_axis.h  pdf_export.c  pdf_export.h  platform_macos.c  playback.c  playback.h  recorder.c  recorder.h  render2d.c  (+10 more)
